--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <option selected>Category</option>
                     <option value="1">API</option>
                     <option value="2">Lab Products</option>
-                    <option value="3">Sombu (FDA Approved)</option>
+<!--                     <option value="3">Sombu (FDA Approved)</option> -->
                   </select>
                   <form>
                       <br> 
